<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_box_20"
    android:backgroundTint="@color/white">

    <View
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_box_12"
        android:backgroundTint="@color/background_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleName"
        style="@style/Headline_3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_common_side"
        android:layout_marginTop="24dp"
        android:text="@string/select_filter_bottom_sheet_fragment_title"
        android:textColor="@color/Text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="30dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName"
        tools:listitem="@layout/item_radio_button_picker" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        style="@style/Widget.Button.GrayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_common_side"
        android:text="@string/select_filter_bottom_sheet_fragment_apply_filters_text"
        app:layout_constraintBottom_toTopOf="@+id/resetFiltersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetFiltersButton"
        style="@style/Widget.Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_common_side"
        android:text="@string/select_filter_bottom_sheet_fragment_reset_filters_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>