<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/home_fragment_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchLayout"
            style="@style/Widget.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_common_side"
            android:layout_marginTop="@dimen/spacing_extra_small"
            android:hint="@string/home_fragment_search_hint"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchValue"
                style="@style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Какая то треня" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/space_common_side"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchLayout"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/currentFilterValue"
            style="@style/Subtitle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_common_side"
            android:textColor="@color/Text_2"
            app:layout_constraintBottom_toBottomOf="@+id/filterButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filterButton"
            tools:text="Выбранный фильтр: Бегит качат пресс" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercisesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:clipToPadding="false"
            android:paddingBottom="30dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterButton"
            tools:listitem="@layout/item_training_card"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="54dp"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintDimensionRatio="1:0.93"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterButton"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/bottle_animation" />

        <TextView
            android:id="@+id/notFoundText"
            style="@style/Subtitle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/home_fragment_not_found_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loader" />

        <Button
            android:id="@+id/resetFilters"
            style="@style/Widget.Button.GrayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_small"
            android:padding="@dimen/spacing_extra_small"
            android:text="@string/home_fragment_reset_filters_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notFoundText" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/notFoundGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="loader, notFoundText, resetFilters" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>